# OpenHSML

./: .gitignore  CMakeLists.txt  README.md  license.txt
apps/: CMakeLists.txt  demo.cpp
apps/OpenHSML_apps/: OpenHSML_apps.cpp
include/OpenHSML/: OpenHSML.h
include/lib/: .gitignore  OpenHSML.h
share/: Infoopenhsml.cmake
share/cmake/: OpenHSML_PID_Version.cmake  openhsml_PID_Version.cmake  pepper_stereovision_PID_Version.cmake
share/doxygen/: doxygen_log.txt
share/resources/calibration/: calibration.yaml  points_of_calibration.yaml
src/: CMakeLists.txt  OpenHSML.cpp  display_pts.py
src/OpenHSML/: OpenHSML.cpp
test/: CMakeLists.txt
